# users_manager.rust

./: .env  Cargo.toml  LICENSE  docker-compose.yml  makefile
migrations/: 20231112013549_base.down.sql  20231112013549_base.up.sql
src/: conf.rs  db.rs  main.rs
src/handler/: users.rs
src/model/: http.rs  mod.rs  users.rs
