[package]
name = "active_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
utoipa = { version = "3", features = ["actix_extras"] }
sqlx = { version = "0.7.2", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
env_logger = "0.10.1"
dotenv = "0.15.0"
