[package]
name = "active_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
] }
env_logger = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
rust-crypto = "^0.2"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
password-hash = "0.5.0"
bcrypt-pbkdf = "0.10.0"
password-auth = "1.0.0"
